--- a/config.org
+++ b/config.org
@@ -14,6 +14,7 @@
 
 (setq-default indent-tabs-mode nil) ; disable tabs
 (setq-default tab-width 4) ; 4 spaces = 1 tab
+(setq sgml-basic-offset 4)
 (setq indent-line-function 'insert-tab) ; spaces as tabs
 (setq tab-always-indent nil)
 #+end_src
@@ -47,10 +48,12 @@ Make sure ~emacsclient~ starts up with the dashboard buffer by default:
 
 ** Superword Mode
 
-Enable ~superword-mode~ so underscores are treated as words, which is respected by ~evil-mode~.
++Enable ~superword-mode~ so underscores are treated as words, which is respected by ~evil-mode~.+
+
+Superword mode sometimes breaks ~evil-mode~ and does not navigate through the entire word.
 
 #+begin_src emacs-lisp
-(global-superword-mode t)
+(global-superword-mode nil)
 #+end_src
 
 ** Override Face Attributes
@@ -83,7 +86,8 @@ Backups must be placed on a mount partition (where all my documents are normally
 #+begin_src emacs-lisp
 (setq
  backup-by-copying t
- backup-directory-alist '(("." . "~/mnt/emacs-backup"))
+ backup-directory-alist '((".*" . "~/mnt/emacs-backup"))
+ auto-save-default nil
  delete-old-versions t
  kept-new-versions 6
  kept-old-versions 2
@@ -334,6 +338,20 @@ Takes clean and fancy snapshots of any selected region.
 (use-package gnuplot)
 #+end_src
 
+*** Treemacs
+
+#+begin_src emacs-lisp
+(use-package treemacs)
+#+end_src
+
+*** Emmet Mode
+
+Generates HTML snippets from CSS selectors.
+
+#+begin_src emacs-lisp
+(use-package emmet-mode)
+#+end_src
+
 ** Themes
 
 *** Doom Themes
@@ -377,7 +395,7 @@ Use the modeline from Doom Emacs.
   (doom-modeline-mode 1)
   :config
   (setq doom-modeline-height 32)
-  :disabled t)
+  (setq doom-modeline-workspace-name nil))
 
 (column-number-mode)
 #+end_src
@@ -386,6 +404,7 @@ Use the modeline from Doom Emacs.
 
 #+begin_src emacs-lisp
 (use-package mood-line
+  :disabled t
   :config
   (mood-line-mode))
 #+end_src
@@ -568,6 +587,19 @@ Enables popups
   (prog-mode . highlight-indent-guides-mode))
 #+end_src
 
+*** Org Auctex
+
+Render faster LaTeX previews in org mode.
+
+#+begin_src emacs-lisp
+(use-package org-auctex
+  :disabled t
+  :straight
+  (:host github :repo "karthink/org-auctex")
+  :config
+  (org-auctex-mode))
+#+end_src
+
 ** Writing Modes
 
 *** Writeroom Mode
@@ -636,6 +668,16 @@ Enables Org Babel support for Rust
 (use-package typescript-mode
   :hook
   (typescript-mode . lsp))
+#+end_src
+
+*** Web Mode
+
+Allows for smart editing with HTML files (smarter indentation for embedded CSS and JS + templating support).
+
+#+begin_src emacs-lisp
+(use-package web-mode
+  :config
+  (setq web-mode-enable-auto-pairing nil))
 #+end_src
 
 ** LSP / Autocomplete
@@ -792,6 +834,14 @@ Enable ~hl-line-mode~ for programming buffers.
 (add-hook 'prog-mode-hook #'hl-line-mode)
 #+end_src
 
+** Fringes
+
+Set the fringe style to half-width.
+
+#+begin_src emacs-lisp
+(fringe-mode '(4 . 2))
+#+end_src
+
 * Keybinds
 
 ** Global
@@ -882,7 +932,8 @@ In evil mode, use =M-u= as the universal argument.
 (general-define-key
  :prefix "<leader>"
  :keymaps 'normal
- "SPC" '($tabspaces-counsel-switch-buffer :which-key "Switch buffer"))
+ "SPC" '($tabspaces-counsel-switch-buffer :which-key "Switch buffer")
+ "." '(find-file :which-key "Find file in current directory"))
 #+end_src
 
 ** Appearance =SPC a=
@@ -924,7 +975,8 @@ In evil mode, use =M-u= as the universal argument.
  "" '(nil :which-key "toggle")
  "w" 'writeroom-mode
  "o" 'olivetti-mode
- "c" 'canvas-mode)
+ "c" 'canvas-mode
+ "t" 'treemacs)
 #+end_src
 
 ** File =SPC f=
@@ -937,7 +989,8 @@ In evil mode, use =M-u= as the universal argument.
  "f" '($find-file-or-project :which-key "Find file")
  "." '(find-file :which-key "Find file in current directory")
  ;;"c" '(find-config-file :which-key "Open config.org")
- "r" '(rename-file-and-buffer :which-key "Rename file & buffer")
+ "r" '(counsel-recentf :which-key "Recent files")
+ "R" '(rename-file-and-buffer :which-key "Rename file & buffer")
  "d" '(delete-file :which-key "Delete file"))
 #+end_src
 
@@ -981,6 +1034,7 @@ In evil mode, use =M-u= as the universal argument.
  :prefix "<leader> s"
  :keymaps 'normal
  "" '(nil :which-key "search")
+ "s" '(swiper :which-key "Search with swiper")
  "o" '(counsel-outline :which-key "Outline")
  "O" '(counsel-org-goto-all :which-key "All outlines"))
 #+end_src
@@ -1264,4 +1318,16 @@ Enable Org Babel for specific langauges.
  '((C . t)
    (emacs-lisp . t)
    (python . t)))
+#+end_src
+
+** Org ID
+
+Require the Org ID package
+
+#+begin_src emacs-lisp
+(require 'org-id)
+#+end_src
+
+#+begin_src emacs-lisp
+(setq org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
 #+end_src
